<resources>
    <string name="app_name">BabbleBooster</string>

    <string name="dialog_action_ok">OK</string>
    <!--<string name="dialog_action_cancel">Cancel</string>-->
    <string name="dialog_error_title">Sorry</string>

    <!-- Detail Activity -->
    <!--<string name="text_pokemon_id">Id: %s</string>-->
    <!--<string name="text_pokemon_name">Name: %s</string>-->
    <!--<string name="text_pokemon_experience">Experience: %s</string>-->

    <!-- Error View -->
    <string name="error_title">Oops</string>
    <string name="error_message">There was a problem loading the pokemon, please try again!</string>
    <string name="error_reload">Reload</string>
    <string name="title_activity_maps_sample">Map</string>
    <string name="error_something_bad_happened">Something bad happened. Please try again.</string>
    <string name="text_password">Password</string>
    <string name="login">Login</string>
    <string name="login_online">Synchronize WIFI</string>
    <string name="play">Play</string>
    <string name="test">Test</string>
    <string name="settings">Settings</string>
    <string name="progress">Progress</string>
</resources>
